--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Hello, I am E-Business major student at Cal Poly Pomono looking to take the next step and solidfy a career.</p>
+      <p>Hello, I am E-Business major student at Cal Poly Pomona looking to take the next step and solidfy a career.</p>
       <h1>Where I'm From</h1>
       <p>Details here...</p>
       <h1>What are your favorite hobbies?</h1>
