updated the rest of my bio

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>Hello, I am E-Business major student at Cal Poly Pomona looking to take the next step and solidfy a career.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Milpitas, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I am a big sports fan (mostly basketball), I play PC video games, and I love to eat.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to create my own business ideas that stem from writing code.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in West Covina, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I took a few coding classes back at community college and always enjoyed it for the most part. It also pays pretty nicely.</p>
     </section>
 
     <footer id="footer">
